# qpc-zephyr-port

./: .gitignore  README.md
apps/blinky/app/: Kconfig
apps/blinky/app/src/: main.c
apps/dpp/: west.yml
apps/dpp/app/: CMakeLists.txt  prj.conf
apps/dpp/app/src/: bsp.c  main.c  philo.c
apps/hello/app/: CMakeLists.txt
apps/hello/app/src/: main.c
port/: qep_port.h  qf_port.c  qf_port.h  qs_port.h  safe_std.h
